--- a/index.html
+++ b/index.html
@@ -6,58 +6,47 @@
     <title>Micro-site</title>
     <style></style>
   </head>
-  <body>
-    <div class="container">
-      <div class="column">
-        <img src="images/ahmad-odeh-lVNjROfGm8Q-unsplash.jpg" width="100%" />
-        <p>This is the content of page 1.</p>
-      </div>
-      <div class="column">
-        <img src="images/EgyptArt4.jpg" width="100%" />
-        <p>This is the content of page 2.</p>
-      </div>
-      <div class="column">
-        <div id="book">
-          <div id="spine">
-            <img
-              src="images/max-bender-1YHXFeOYpN0-unsplash.jpg"
-              width="100%"
-            />
-          </div>
-          <div id="front">
-            <img
-              src="images/max-bender-1YHXFeOYpN0-unsplash.jpg"
-              width="100%"
-            />
-          </div>
-          <div id="back">
-            <img
-              src="images/max-bender-1YHXFeOYpN0-unsplash.jpg"
-              width="100%"
-            />
-          </div>
+  <main>
+    <body>
+        <div class="throne">
+          <img src="images/ahmad-odeh-lVNjROfGm8Q-unsplash.jpg" width="100%" />
+          <p>This is the content of page 1.</p>
         </div>
-        <p>This is the content of page 3.</p>
+        <div class="poster">
+          <img src="images/EgyptArt4.jpg" width="100%" />
+          <p>This is the content of page 2.</p>
+        </div>
+        <div class="book">
+            <div class="leftbook" style="background-color: burlywood;">
+              <img src="images/max-bender-1YHXFeOYpN0-unsplash.jpg" />
+            </div>
+            <div class="middlebook" style="background-color: burlywood;">
+              <img src="images/max-bender-1YHXFeOYpN0-unsplash.jpg" />
+            </div>
+            <div class="rightbook">
+              <img src="images/max-bender-1YHXFeOYpN0-unsplash.jpg" style="background-color: burlywood;"/>
+            </div>
+          </div>
+          <p>This is the content of page 3.</p>
       </div>
-    </div>
-    <button class="button" onclick="nextPage()">Next Page</button>
-    <script>
-      let currentPage = 0;
-
-      function nextPage() {
-        currentPage++;
-        if (currentPage > 3) {
-          currentPage = 1;
+      <button class="button" onclick="nextPage()">Next Page</button>
+      <script>
+        let currentPage = 0;
+        function nextPage() {
+          currentPage++;
+          if (currentPage > 3) {
+            currentPage = 1;
+          }
+          const columns = document.querySelectorAll(".column");
+          columns.forEach((column) => {
+            column.style.display = "none";
+          });
+          const currentColumn = document.querySelector(
+            `.container .column:nth-child(${currentPage})`
+          );
+          currentColumn.style.display = "grid";
         }
-        const columns = document.querySelectorAll(".column");
-        columns.forEach((column) => {
-          column.style.display = "none";
-        });
-        const currentColumn = document.querySelector(
-          `.container .column:nth-child(${currentPage})`
-        );
-        currentColumn.style.display = "block";
-      }
-    </script>
-  </body>
+      </script>
+    </body>
+  </main>
 </html>
