--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Landing-Page</title>
   </head>
-<<<<<<< HEAD
   <body>
     <a href="index.html"
       ><div class="logo">
@@ -72,8 +71,7 @@
       </script>
     </body>
   </main>
->>>>>>> e050156230be3385bc1f4857f66b1412958849e4
-</html>
+  </html>
 <style>
   body {
     margin: 0 auto;
