--- a/index.html
+++ b/index.html
@@ -8,96 +8,58 @@
   <body>
     <a href="index.html"
       ><div class="logo">
-        <img src="img/Siya-logo.png" width="50px" alt="logo" /></div
-    ></a>
-    <div class="box">
-      <a href="page2.html"
-        ><div class="room"><strong>Throne Room</strong></div></a
-      >
-      <a href="page4.html"
-        ><div class="book"><strong>Book Cover</strong></div></a
-      >
-      <a href="page3.html"
-        ><div class="poster"><strong>Poster</strong></div></a
-      >
-    </div>
+        <img
+          src="img/logokafre.png"
+          width="50px"
+          alt="logo"
+        /></a>
+        <div class="box">
+          <a href="page2.html"
+            ><div class="room"><strong>Throne Room</strong></div></a
+          >
+          <a href="page4.html"
+            ><div class="book"><strong>Book Cover</strong></div></a
+          >
+          <a href="page3.html"
+            ><div class="poster"><strong>Poster</strong></div></a
+          >
+        </div>
+      </div>
     <main id="bottom">
       <div id="work">
-        <img src="img/khafre.jpg" width="100%" alt="khafre" />
+        <a href="page2.html"><div id="arrow">&#8249;</div></a>
       </div>
     </main>
   </body>
-=======
-  <main>
-    <body>
-        <div class="throne">
-          <img src="images/ahmad-odeh-lVNjROfGm8Q-unsplash.jpg" width="100%" />
-          <p>This is the content of page 1.</p>
-        </div>
-        <div class="poster">
-          <img src="images/EgyptArt4.jpg" width="100%" />
-          <p>This is the content of page 2.</p>
-        </div>
-        <div class="book">
-            <div class="leftbook" style="background-color: burlywood;">
-              <img src="images/max-bender-1YHXFeOYpN0-unsplash.jpg" />
-            </div>
-            <div class="middlebook" style="background-color: burlywood;">
-              <img src="images/max-bender-1YHXFeOYpN0-unsplash.jpg" />
-            </div>
-            <div class="rightbook">
-              <img src="images/max-bender-1YHXFeOYpN0-unsplash.jpg" style="background-color: burlywood;"/>
-            </div>
-          </div>
-          <p>This is the content of page 3.</p>
-      </div>
-      <button class="button" onclick="nextPage()">Next Page</button>
-      <script>
-        let currentPage = 0;
-        function nextPage() {
-          currentPage++;
-          if (currentPage > 3) {
-            currentPage = 1;
-          }
-          const columns = document.querySelectorAll(".column");
-          columns.forEach((column) => {
-            column.style.display = "none";
-          });
-          const currentColumn = document.querySelector(
-            `.container .column:nth-child(${currentPage})`
-          );
-          currentColumn.style.display = "grid";
-        }
-      </script>
-    </body>
-  </main>
-  </html>
+</html>
 <style>
+  @import url("https://fonts.googleapis.com/css2?family=Code+Pro&display=swap");
+
   body {
     margin: 0 auto;
-    background-color: rgb(198, 63, 63);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
   }
   #top {
     display: grid;
     grid-template-columns: 200px 1670px;
+    position: fixed;
   }
   .logo {
-    width: 1920px;
-    height: 100px;
     background-position: center;
     background-size: cover;
     margin-left: 6px;
-    margin-top: 6px;
+    margin-top: 0px;
   }
   .box {
-    position: absolute;
-    margin-top: -100px;
+    font-size: large;
+    position: sticky;
+    margin-top: -40px;
     margin-left: 1440px;
-    height: 100px;
     width: 300px;
     display: grid;
-    grid-template-columns: 100px 100px 100px;
+    grid-template-columns: 150px 150px 150px;
   }
   .room {
     width: 100px;
@@ -106,7 +68,7 @@
   .poster {
     width: 100px;
     height: 100px;
-    margin-left: 70px;
+    margin-left: 0px;
   }
   .book {
     width: 100px;
@@ -114,11 +76,17 @@
     margin-left: 0px;
   }
 
-  a:hover {
+  a {
     text-decoration: none;
-    color: rgb(182, 11, 11);
   }
 
+  div#leftarrow {
+    color: rgb(255, 255, 255);
+    font-size: 7rem;
+    margin-left: 180px;
+    text-align: left;
+    margin-top: 450px;
+  }
   #bottom {
     width: 1920px;
     height: 930px;
@@ -128,17 +96,14 @@
   }
 
   #work {
+    font-size: large;
     position: relative;
     object-fit: fill;
-    right: 0;
-    bottom: 0;
+    background-image: url(img/khafre.jpg);
+    background-position: center;
+    background-size: cover;
   }
 
-  video#work {
-    position: absolute;
-    width: 1920px;
-    height: 930px;
-  }
   .left {
     position: absolute;
     width: 500px;
@@ -149,11 +114,8 @@
     width: 320px;
     height: 930px;
   }
-  .png {
-    width: 50px;
-    height: 50px;
 
-    margin-top: 440px;
-    margin-left: 135px;
+  img {
+      margin-top: 20px;
   }
 </style>
