--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,12 @@
     <header>
       <a href="index.html"
         ><div>
-          <img src="img/Siya-logo.png" width="60px" alt="logo" /></div
+          <img
+            id="logo"
+            src="img/logokafre-white.png"
+            width="50px"
+            alt="logo"
+          /></div
       ></a>
     </header>
     <div class="box">
@@ -33,6 +38,9 @@
 </html>
 <style>
   body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
     background-image: url(img/room.jpg);
     background-size: cover;
     background-repeat: none;
@@ -44,6 +52,15 @@
 
   a {
     text-decoration: none;
+    width: max-content;
+    margin-top: 0px;
+  }
+
+  img {
+    margin-top: 5px;
+  }
+  .room {
+    margin-left: -30px;
   }
   #top {
     display: grid;
@@ -53,7 +70,7 @@
   .box {
     color: white;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1rem;
     text-align: end;
     position: relative;
     margin-top: -30px;
@@ -66,23 +83,23 @@
   div#middle {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 85vh;
-    width: 80vw;
+    height: 80vh;
+    width: 90vw;
   }
 
   div#leftarrow {
-    color: rgb(198, 63, 63);
+    color: rgb(255, 255, 255);
     font-size: 7rem;
     margin-left: 180px;
     text-align: left;
-    margin-top: 510px;
+    margin-top: 450px;
   }
 
   div#rightarrow {
-    color: rgb(198, 63, 63);
+    color: rgb(255, 255, 255);
     font-size: 7rem;
-    margin-left: 180px;
+    margin-left: 650px;
     text-align: right;
-    margin-top: 510px;
+    margin-top: 450px;
   }
 </style>
