--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,7 @@
     <header>
       <a href="index.html"
         ><div>
-          <img src="img/Siya-logo.png" width="50px" alt="logo" /></div
+          <img src="img/logokafre-white.png" width="50px" alt="logo" /></div
       ></a>
       <div class="box">
         <a href="page2.html"
@@ -32,9 +32,12 @@
 </html>
 <style>
   body {
-    background-color: rgb(198, 63, 63);
+    background-color: rgb(215 19 3);
     margin-left: 8px;
     width: fit-content;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
   }
 
   header {
@@ -42,6 +45,7 @@
   }
 
   a {
+    font-family: code pro, monospace;
     text-decoration: none;
     color: white;
     font-size: 14px;
@@ -53,7 +57,7 @@
 
   div.poster {
     position: fixed;
-    margin-top: -160px;
+    margin-top: -580px;
     margin-left: 650px;
     width: 520px;
   }
@@ -86,6 +90,7 @@
     margin-left: 550px;
     text-decoration: none;
     cursor: pointer;
+    margin-top: 500px;
   }
 
   div#next {
