--- a/page4.html
+++ b/page4.html
@@ -6,15 +6,24 @@
     <title>Book</title>
     <link rel="stylesheet" href="main.css" />
   </head>
-
   <body>
     <header>
       <a href="index.html"
         ><div>
-          <img src="img/Siya-logo.png" width="50px" alt="logo" /></div
+          <img src="img/logokafre.png" width="50px" alt="logo" /></div
       ></a>
     </header>
-
+    <div class="box">
+      <a href="page2.html"
+        ><div class="room"><strong>Throne Room</strong></div></a
+      >
+      <a href="page4.html"
+        ><div class="book"><strong>Book Cover</strong></div></a
+      >
+      <a href="page3.html"
+        ><div class="poster"><strong>Poster</strong></div></a
+      >
+    </div>
     <main>
       <div id="middle">
         <a href="page2.html"><div id="arrow">&#8249;</div></a>
@@ -31,35 +40,64 @@
   body {
     background-color: rgb(255, 255, 255);
     margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
   }
 
   header {
     display: flex;
     justify-content: space-around;
-    margin: 10px;
-    height: 10vh;
+    margin-left: -1870px;
     align-items: center;
   }
 
   main {
-    margin: 0;
+    margin-top: 20px;
     display: grid;
     place-items: center;
+  }
+  .box {
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+    text-align: end;
+    position: relative;
+    margin-top: -30px;
+    margin-left: 1440px;
+    width: 300px;
+    display: grid;
+    grid-template-columns: 100px 100px 100px;
   }
 
   a {
     text-decoration: none;
+    width: max-content;
   }
+
   div {
     background-repeat: no-repeat;
     background-size: auto 100%;
     background-position: center;
   }
 
+  .room {
+    color: rgb(0, 0, 0);
+    margin-left: -30px;
+  }
+
+  .book {
+    color: rgb(0, 0, 0);
+  }
+
+  .poster {
+    color: rgb(0, 0, 0);
+  }
+
   div#middle {
     display: grid;
     grid-template-columns: 1fr 2fr 7fr 7fr 1fr;
-    height: 85vh;
+    height: 90vh;
     width: 80vw;
   }
 
@@ -71,6 +109,7 @@
     margin-top: 500px;
     text-decoration: none;
     cursor: pointer;
+    margin-left: 70px;
   }
 
   div#first {
@@ -83,6 +122,6 @@
   }
 
   div#third {
-    background-image: url(img/back-siya.jpg);
+    background-image: url(img/siya=back.jpg);
   }
 </style>
