--- a/page3.html
+++ b/page3.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="index.html"
-        ><div>
+      <a href="page1.html"
+        ><div id="logo">
           <img src="img/logokafre-white.png" width="50px" alt="logo" /></div
       ></a>
       <div class="box">
@@ -32,8 +32,8 @@
 </html>
 <style>
   body {
-    background-color: rgb(215 19 3);
-    margin-left: 8px;
+    background-color: rgb(255, 255, 255);
+    margin-left: 0;
     width: fit-content;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
       Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
@@ -42,13 +42,18 @@
 
   header {
     display: flex;
+    background-color: rgb(198, 63, 63, 0.9);
   }
 
+  div#logo {
+    margin-top: 10px;
+    margin-left: 10px;
+  }
   a {
     font-family: code pro, monospace;
     text-decoration: none;
-    color: white;
-    font-size: 14px;
+    color: rgb(255, 255, 255);
+    font-size: 1.2rem;
   }
   main {
     margin: 0;
@@ -57,22 +62,13 @@
 
   div.poster {
     position: fixed;
-    margin-top: -580px;
-    margin-left: 650px;
-    width: 520px;
-  }
-
-  .menu {
-    color: rgb(255, 255, 255);
-    width: 1720px;
-    height: 46px;
-    margin-bottom: 0px;
+    margin-top: -600px;
+    margin-left: 1000px;
+    width: 760px;
   }
 
   .box {
-    position: absolute;
-    margin-left: 1540px;
-    width: 300px;
+    margin-left: 2200px;
     display: grid;
     grid-template-columns: 100px 100px 100px;
   }
@@ -83,7 +79,7 @@
   }
 
   div#arrow {
-    color: rgb(255, 255, 255);
+    color: rgb(215 19 3);
     display: grid;
     align-content: center;
     font-size: 7rem;
@@ -94,7 +90,7 @@
   }
 
   div#next {
-    color: rgb(255, 255, 255);
+    color: rgb(215 19 3);
     font-size: 7rem;
     text-decoration: none;
     cursor: pointer;
