--- a/page4.html
+++ b/page4.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header>
-      <a href="index.html"
+      <a href="page1.html"
         ><div>
-          <img src="img/logokafre.png" width="50px" alt="logo" /></div
+          <img src="img/logokafre-white.png" width="50px" alt="logo" /></div
       ></a>
     </header>
     <div class="box">
@@ -46,9 +46,11 @@
   }
 
   header {
+    background-color: rgb(198, 63, 63, 0.9);
     display: flex;
     justify-content: space-around;
-    margin-left: -1870px;
+    margin-left: -2490px;
+    margin-top: 10px;
     align-items: center;
   }
 
@@ -60,19 +62,19 @@
   .box {
     color: white;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 1.2rem;
     text-align: end;
     position: relative;
-    margin-top: -30px;
-    margin-left: 1440px;
+    margin-top: -51px;
+    margin-left: 2180px;
     width: 300px;
     display: grid;
     grid-template-columns: 100px 100px 100px;
+    gap: 2rem;
   }
 
   a {
     text-decoration: none;
-    width: max-content;
   }
 
   div {
@@ -82,16 +84,16 @@
   }
 
   .room {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     margin-left: -30px;
   }
 
   .book {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
   }
 
   .poster {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
   }
 
   div#middle {
@@ -105,7 +107,7 @@
     color: rgb(198, 63, 63);
     display: grid;
     align-content: center;
-    font-size: 7rem;
+    font-size: 9rem;
     margin-top: 500px;
     text-decoration: none;
     cursor: pointer;
