--- a/page3.html
+++ b/page3.html
@@ -32,6 +32,8 @@
 </html>
 <style>
   body {
+    margin: 0;
+    height: 100vh;
     background-color: rgb(255, 255, 255);
     margin-left: 0;
     width: fit-content;
@@ -64,7 +66,7 @@
     position: fixed;
     margin-top: -600px;
     margin-left: 1000px;
-    width: 760px;
+    width: 520px;
   }
 
   .box {
@@ -79,11 +81,11 @@
   }
 
   div#arrow {
+    width: 10%;
     color: rgb(215 19 3);
     display: grid;
     align-content: center;
     font-size: 7rem;
-    margin-left: 550px;
     text-decoration: none;
     cursor: pointer;
     margin-top: 500px;
