--- a/four.html
+++ b/four.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
-    <title>Book</title>
+    <title>KHAFRE: BACK+COVER</title>
   </head>
   <body>
     <main>
       <header>
-        <h1>KHAFRE</h1>
+        <h1><a id="logo" href="index.html">KHAFRE</a> <span>:POSTER</span></h1>
         <nav>
           <a href="index-two.html">BOOK</a>
           <a href="three.html">THRONE ROOM</a>
-          <a href="#03">POSTER</a>
+          <div id="poster">POSTER</div>
         </nav>
       </header>
-      <section id="one">
-        <a href="index.html"> </a>
-        <a href="index-two.html">
-          <!-- &#8250; -->
-
+      <section id="four">
+        <a href="three.html">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="32"
@@ -29,7 +26,7 @@
             viewBox="0 0 256 256"
           >
             <path
-              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm29.66-93.66a8,8,0,0,1,0,11.32l-40,40a8,8,0,0,1-11.32-11.32L140.69,128,106.34,93.66a8,8,0,0,1,11.32-11.32Z"
+              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216ZM149.66,93.66,115.31,128l34.35,34.34a8,8,0,0,1-11.32,11.32l-40-40a8,8,0,0,1,0-11.32l40-40a8,8,0,0,1,11.32,11.32Z"
             ></path>
           </svg>
         </a>
