--- a/index-two.html
+++ b/index-two.html
@@ -9,11 +9,14 @@
   <body>
     <main>
       <header>
-        <h1>KHAFRE: <span>BACK+COVER</span></h1>
+        <h1>
+          <a id="logo" href="index.html">KHAFRE</a>
+          <span>:FRONT, SPINE & BACK</span>
+        </h1>
         <nav>
-          <a href="#01">01</a>
-          <a href="#02">02</a>
-          <a href="#03">03</a>
+          <div id="book">BOOK</div>
+          <a href="three.html">THRONE ROOM</a>
+          <a href="#03">POSTER</a>
         </nav>
       </header>
       <section id="two">
@@ -30,7 +33,7 @@
             ></path>
           </svg>
         </a>
-        <a href="index-two.html">
+        <a href="three.html">
           <!-- &#8250; -->
 
           <svg
